# siml

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  LICENSE  README.md  __init__.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pysiml-0.2.10-py3-none-any.whl  pysiml-0.2.7-py3-none-any.whl  pysiml-0.2.9-py3-none-any.whl  requirements.txt  run_tests.sh  search.html  searchindex.js  siml.html  siml.loss_operations.html  siml.networks.html  siml.networks.pyg.html  siml.path_like_objects.html  siml.path_like_objects.siml_files.html  siml.preprocessing.html  siml.preprocessing.siml_scalers.html  siml.preprocessing.siml_scalers.scale_functions.html  siml.services.html  siml.services.inference.html  siml.services.inference.postprocessing.html  siml.services.training.html  siml.services.training.logging_items.html  siml.siml_variables.array_variables.html  siml.siml_variables.html  siml.update_functions.html  siml.utils.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  siml.doctree  siml.loss_operations.doctree  siml.networks.doctree  siml.networks.pyg.doctree  siml.path_like_objects.doctree  siml.path_like_objects.siml_files.doctree  siml.preprocessing.doctree  siml.preprocessing.siml_scalers.doctree  siml.preprocessing.siml_scalers.scale_functions.doctree  siml.services.doctree  siml.services.inference.doctree  siml.services.inference.postprocessing.doctree  siml.services.training.doctree  siml.services.training.logging_items.doctree  siml.siml_variables.array_variables.doctree  siml.siml_variables.doctree  siml.update_functions.doctree  siml.utils.doctree
.doctrees/examples/: 00_basic.doctree  index.doctree  sg_execution_times.doctree
.github/workflows/: gh-pages.yml
_downloads/27a6be9ceb8322f00fefe2cc4d6bc003/: 00_basic.ipynb
_downloads/495a0625ce80023c801ee93b5016050a/: 00_basic.py
_sources/: modules.rst.txt  siml.loss_operations.rst.txt  siml.networks.pyg.rst.txt  siml.networks.rst.txt  siml.path_like_objects.rst.txt  siml.path_like_objects.siml_files.rst.txt  siml.preprocessing.rst.txt  siml.preprocessing.siml_scalers.rst.txt  siml.preprocessing.siml_scalers.scale_functions.rst.txt  siml.rst.txt  siml.services.inference.postprocessing.rst.txt  siml.services.inference.rst.txt  siml.services.rst.txt  siml.services.training.logging_items.rst.txt  siml.services.training.rst.txt  siml.siml_variables.array_variables.rst.txt  siml.siml_variables.rst.txt  siml.update_functions.rst.txt  siml.utils.rst.txt
_sources/examples/: 00_basic.rst.txt  index.rst.txt  sg_execution_times.rst.txt
doc/: conf.py  index.rst  siml.datasets.rst  siml.networks.adjustable_mlp.rst  siml.networks.classifier.rst  siml.networks.deepsets.rst  siml.networks.distributor.rst  siml.networks.gcn.rst  siml.networks.header.rst  siml.networks.identity.rst  siml.networks.mlp.rst  siml.networks.network.rst  siml.networks.networks.rst  siml.networks.nri.rst  siml.networks.rst  siml.optimize.rst  siml.prepost.rst  siml.rst  siml.setting.rst  siml.trainer.rst  siml.updaters.rst  siml.util.rst
docker/: Dockerfile  Dockerfile_cpu  Makefile
examples/: 00_basic.html  00_basic.py  README.rst  index.html  sg_execution_times.html
examples/00_basic_data/: data.yml  isogcn.yml
siml/: __init__.py  collect_results.py  config.py  data_parallel.py  datasets.py  inferer.py  mains.py  networks.py  optimize.py  postprocessor.py  prepost.py  preprocess.py  setting.py  siml_manager.py  study.py  trainer.py  updaters.py  util.py
siml/__main__/: convert_interim_data.py  convert_raw_data.py  optimize.py  plot_losses.py  prepare_preprocess_converters.py  preprocess_interim_data.py  study.py  train.py  visualize_graph.py
siml/base/: siml_const.py  siml_enums.py  siml_typing.py
siml/loss_calculators/: loss_assignment.py  loss_function.py  loss_type.py
siml/loss_operations/: __init__.py  loss_assignment.py  loss_calculator.py  loss_calculator_builder.py  loss_selector.py
siml/networks/: __init__.py  abstract_equivariant_gnn.py  abstract_gcn.py  activation.py  activations.py  adjustable_mlp.py  array2diagmat.py  array2symmat.py  boundary.py  classifier.py  (+42 more)
sphinx/: conf.py  index.rst  requirements.txt
tests/: equivariance_base.py  preprocess.py  test_activations.py  test_boundary.py  test_datasets.py  test_dggnn.py  test_geo.py  test_groups.py  test_inferer.py  test_iso_gcn.py  test_network.py  test_networks.py  test_optimize.py  test_penn.py  test_prepost.py  test_projection.py  test_setting.py  test_sparse.py  test_study.py  test_threshold.py  test_trainer.py  test_trainer_long.py  test_trainer_settings.py  test_util.py
(+2155 files in other folders)
