[tool.poetry]
name = "pysiml"
version = "0.2.9"
description = "SiML - a Simulation ML library"
license = "Apache-2.0"
authors = ["RICOS Co. Ltd."]
readme = "README.md"
repository = "https://github.com/ricosjp/pysiml"
documentation = "https://ricosjp.github.io/pysiml/"
packages = [
    { include = "siml"},
]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"

PyYAML       = ">=5"
femio        = {version = ">=0.3.1", allow-prereleases = true}
scikit-learn = ">=0.24.0"
einops       = "^0.2"
joblib       = ">=0.14.1"
optuna       = "^1.3"
pandas       = "^1.0"
pycryptodomex = "^3.9.0"
pydot = "^1.4.1"
pytorch-ignite = "^0.3"
sqlalchemy = "==1.3.13"
PyQt5 = {version = "^5.14.0", optional = true}
toml = "^0.10.2"
torch = "^1.9.0"
metis = "^0.2a5"
pydantic = "^1.10.7"

[tool.poetry.scripts]
convert_interim_data = "siml.__main__.convert_interim_data:main"
optimize = "siml.__main__.optimize:main"
plot_losses = "siml.__main__.plot_losses:main"
prepare_preprocess_converters = "siml.__main__.prepare_preprocess_converters:main"
preprocess_interim_data = "siml.__main__.preprocess_interim_data:main"
train = "siml.__main__.train:main"
visualize_graph = "siml.__main__.visualize_graph:main"

[tool.poetry.dev-dependencies]
chainer = "^7.0"
pytest = "^5.3"
autopep8 = "^1.4"
sphinx = "^2.3"
sphinx_rtd_theme = "^0.4.3"
sphinx-gallery = "^0.9.0"
flake8 = "^5.0.4"

[tool.poetry.extras]
cupy = ["cupy"]
PyQt5 = ["PyQt5"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
